k8s/nginx-static.yaml
# This deployment allows the nginx-static dogu to patch the deployment generated by the dogu operator.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-static
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-static
    spec:
      containers:
        - name: nginx-static
          volumeMounts:
            - name: menu-json-volume
              mountPath: /var/www/html/warp/menu
      volumes:
        - name: menu-json-volume
          configMap:
            name: k8s-ces-menu-json
